2013-01-08  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/libm-test-ulps: Update.

2014-01-08  Joseph Myers  <joseph@codesourcery.com>

	[BZ #16408]
	* sysdeps/ieee754/ldbl-128ibm/s_expm1l.c (__expm1l): Use __expl
	for large positive arguments.

2014-01-07  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/powerpc/nofpu/libm-test-ulps: Regenerated.

	* math/auto-libm-test-in: Mark various tests with
	xfail-rounding:ldbl-128ibm.
	* math/auto-libm-test-out: Regenerated.

	[BZ #16407]
	* sysdeps/ieee754/ldbl-128ibm/e_coshl.c (__ieee754_coshl):
	Increase overflow threshold.

2014-01-07  Ondřej Bílka  <neleai@seznam.cz>

	[BZ #14286]
	* stdio-common/vfprintf.c: Check for integer overflow.

2014-01-07  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/s390/dl-tls.h: sysdeps/s390/dl-tls.h: Remove casts for
	the first argument and return value of __tls_get_addr_internal.

2014-01-07  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/s390/s390-32/dl-machine.h: Gate the definition of refsym
	also with !RTLD_BOOTSTRAP to get rid of unused variable warning.

2014-01-07  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/s390/Makefile: Build rtld-global-offsets.sym.
	* sysdeps/s390/rtld-global-offsets.sym: New file.
	* sysdeps/unix/sysv/linux/s390/Versions: Add getcontext as new
	GLIBC_2.19 symbol.
	* sysdeps/unix/sysv/linux/s390/getcontext.S: New file.
	* sysdeps/unix/sysv/linux/s390/s390-32/getcontext.S: Rename to ...
	* sysdeps/unix/sysv/linux/s390/s390-32/getcontext-common.S:
	... this.
	* sysdeps/unix/sysv/linux/s390/s390-64/getcontext.S: Rename to ...
	* sysdeps/unix/sysv/linux/s390/s390-64/getcontext-common.S:
	... this.
	* sysdeps/unix/sysv/linux/s390/s390-32/nptl/libc.abilist:
	Regenerate.
	* sysdeps/unix/sysv/linux/s390/s390-64/nptl/libc.abilist:
	Regenerate.
	* sysdeps/unix/sysv/linux/s390/s390-32/setcontext.S: Restore upper
	halfs of GPRs for high_gprs contexts.